--- a/src/components/MainPage/MainPage.scss
+++ b/src/components/MainPage/MainPage.scss
@@ -1,5 +1,15 @@
+@import '../../styles/style.scss';
+
+
 .mainpage{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    h1{
+        color: $redColor;
+    }
+    button{
+       @include buttonStyle($redColor,20px);
+    }
 }
