--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,25 +1,49 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0%;
   padding: 0%;
 }
 
+.logo img {
+  margin-left: 20px;
+}
+
 .navbar {
   width: 100%;
   height: 80px;
-  background-color: rgb(24, 24, 24);
+  background-color: #FFB6C1;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
 }
 
 .navbar a {
   font-size: 20px;
   text-decoration: none;
-  color: rgb(235, 235, 235);
+  color: rgb(24, 24, 24);
   font-family: Arial, Helvetica, sans-serif;
   margin: 10px;
 }
 
 .navbar .links {
   margin-right: 20px;
+}
+
+button {
+  border-radius: 50px;
+  border: none;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 700;
+  padding: 15px 60px;
+  background-color: rgb(235, 235, 235);
+  color: "#333";
+}
+button:hover {
+  opacity: 0.9;
+  transform: scale(0.98);
 }/*# sourceMappingURL=Navbar.css.map */
