--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,24 +1,33 @@
 @import '../../styles/style.scss';
 
+*{
+    box-sizing: border-box;
+}
 body{
     margin: 0%;
     padding: 0%;
 }
+.logo img{
+    margin-left: 20px;
+}
 .navbar{
     width: 100%;
     height: 80px;
-    background-color: $blackColor;
+    background-color: $baseColor;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
 }
 .navbar a{
     font-size: 20px;
     text-decoration: none;
-    color: $whiteClor;
+    color: $blackColor;
     font-family: $titleFont;
     margin: 10px;
 }
 .navbar .links{
     margin-right: 20px;
+}
+button{
+    @include buttonStyle('#333',16px,$whiteClor);
 }
