--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,10 @@
+.container {
+  width: 1000px;
+  max-width: 100%;
+  padding: 0px 20px;
+  margin: 0 auto;
+}
+
 * {
   box-sizing: border-box;
 }
