--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,1 +1,6 @@
-/*# sourceMappingURL=style.css.map */
+.container {
+  width: 1000px;
+  max-width: 100%;
+  padding: 0px 20px;
+  margin: 0 auto;
+}/*# sourceMappingURL=style.css.map */
